fix(community-card): fix overflow on mobile devices

--- a/src/components/Community/Community.module.css
+++ b/src/components/Community/Community.module.css
@@ -25,6 +25,8 @@
 .powered {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: var(--margin-large);
 }
 
